--- a/Demo/index.html
+++ b/Demo/index.html
@@ -42,7 +42,7 @@
 
         <div class="targetbite-widget-container">
             <div class="cta" id="targetbite-widget-container-cta">
-                <div class="left">
+                <div class="left" onclick="openModal()">
                     <span class="card">
                         <?xml version="1.0" encoding="iso-8859-1"?>
                         <svg height="40px" width="40px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
