update Demo/index.html and targetbite-widget.js

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -40,7 +40,7 @@
             <h1>Your Web App Here!</h1>
         </div>
 
-        <div class="targetbite-widget-container">
+        <!-- <div class="targetbite-widget-container">
             <div class="cta" id="targetbite-widget-container-cta">
                 <div class="left" onclick="openModal()">
                     <span class="card">
@@ -325,7 +325,7 @@
                     box-shadow: inset 0px 0px 0px 30px #fff;
                 }
             }
-        </style>
+        </style> -->
     </body>
     <style>
         body {
