--- a/Demo/index.html
+++ b/Demo/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Demo Website</title>
-        <script src="https://cdn.jsdelivr.net/gh/TargetBite/Widget/dist/targetbite-widget.v1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/TargetBite/Widget/dist/targetbite-widget.js"></script>
         <script>
             let optedIn = false;
             const modal = document.getElementById('targetbite-widget-container-modal');
