--- a/Demo/index.html
+++ b/Demo/index.html
@@ -329,7 +329,7 @@
     </body>
     <style>
         body {
-            background-image: linear-gradient(to right, #7f53ac 0, #657ced 100%);
+            background-image: linear-gradient(to right, #53a9ac 0, #6595ed 100%);
         }
         .main {
             display: flex;
