update Demo/index.html and targetbite-widget.js

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -8,7 +8,7 @@
         </div>
         <script src="../dist/targetbite-widget.js" appKey="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
         <script>
-            new TargetBiteClient().setData({
+            new TargetBiteClient().userData({
                 email: "jake@example.com"
             })
         </script>
