update Demo/index.html and targetbite-widget.js

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -9,7 +9,14 @@
         <script src="../dist/targetbite-widget.js" appKey="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
         <script>
             new TargetBiteClient().userData({
-                email: "jake@example.com"
+                email: "jake@example.com",
+                name: "Jake",
+                surname: "Smith",
+                phone: "+1 234 567 89 00",
+                country: "US",
+                city: "New York",
+                address: "Wall Street",
+                zip: "123456",
             })
         </script>
     </body>
