--- a/Demo/index.html
+++ b/Demo/index.html
@@ -9,7 +9,7 @@
         <script src="../dist/targetbite-widget.js" appKey="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
         <script>
             new TargetBiteClient().userData({
-                email: "jake@example.com",
+                email: "jake1@example.com",
                 name: "Jake",
                 surname: "Smith",
                 phone: "+1 234 567 89 00",
