update Demo/index.html and targetbite-widget.js

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -6,10 +6,10 @@
         <div class="main">
             <h1>Your Web App Here!</h1>
         </div>
-        <script src="../dist/targetbite-widget.js" appKey="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
+        <script src="../dist/targetbite-widget.js" clientId="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
         <script>
             new TargetBiteClient().userData({
-                email: "jake1@example.com",
+                email: "jske1@example.com",
                 name: "Jake",
                 surname: "Smith",
                 phone: "+1 234 567 89 00",
