--- a/Demo/index.html
+++ b/Demo/index.html
@@ -6,18 +6,17 @@
         <div class="main">
             <h1>Your Web App Here!</h1>
         </div>
-        <script src="../dist/targetbite-widget.js" clientId="f36f35b2-eb36-4cb3-ba13-08941da03b7b"></script>
+        <script
+            src="https://targetbite.com/widget.js"
+            clientId="vUD22PnSFTU7nTZlyjHdFN2khHl1">
+        </script>
         <script>
             new TargetBiteClient().userData({
-                email: "jske1@example.com",
-                name: "Jake",
-                surname: "Smith",
-                phone: "+1 234 567 89 00",
-                country: "US",
-                city: "New York",
-                address: "Wall Street",
-                zip: "123456",
-            })
+                email: "john@example.com",
+                name: "John Doe",
+                paying_customer: true,
+                tags: ["regular", "expert"]
+            });
         </script>
     </body>
     <style>
